--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,11 @@ edition = "2018"
 [dependencies]
 anyhow = "1.0.58"
 clap = "3.2.15"
+futures = "0.3"
 influxdb2 = "0.1.1"
 serialport = "4.2.0"
+serde = { version = "1.0.140", features = ["derive"] }
+serde_derive = "1.0.140"
+serde-hex = "0.1.0"
+serde-xml-rs = "0.5.1"
+tokio = { version = "1", features = ["full"] }
